    - develop a PyCharm plugin for FactoryBuilder type hints, and mod dev stuff


changelog of snapshot <21w39a>, released on <29.09.2021> targeting <1.17>
    Resource system:
        - optimised how mc source assets are linked at setup time

    Rendering:
        - broke backwards compatibility COMPLETELY
        - the old rendering events are GONE, handled now by a new rendering layer system
        - removed the out-of-bounds events (realy early & after cleanup rendering)

    States:
        - states can now optionally define a state renderer which is only init-ed on clients

    Blocks:
        - a whole lot of new blocks, incuding variants not in the original game
        - no detailed list arrival, see the diff of "/data view registry minecraft:block" command

    Issues fixed:
        - Chunk.remove_block with block instances
        - player /give command & API for picking up blocks
        - falling blocks could result in a crash
        - commands executed only by someone, not somewhere, would have None as position instead of the this.position


changelog of snapshot 21w37a, released on 15.09.2021 targeting 1.17
    Python:
        - allowing now python 3.10, as all our dependencies have upgraded their support

    Registries:
        - some work on deferred registries, and the other registry parts

    Rendering:
        - window caption contains now in dev version branch name + last commit hash

    Bug Fixes:
        - BlockItemGenerator was doing not what it was supposed to do

    Gameplay:
        - creative item search tab is now filled with items

    Capabilities:
        - implemented capability API
        - currently supports items [AbstractItem instance, not ItemStack], blocks and entities
        - can be disabled for entries in the system
        - WARNING: block & item implementation is linked to some public-facing serialization code, meaning
            mods which are not careful enough may override the needed bindings

    Blocks: