@@ -1811,4 +1811,7 @@ B   [uuk]: fixed NewBlocks.py being loaded to late for things to work with combi
 F   [uuk]: added dummy implementation for buttons
 b   [uuk]: combined factory calls with block_factory_consumer were crashing
 I   [uuk]: blocks have now no face info on dedicated servers
+f   [uuk]: FaceInfo.hide_all is now more optimal for full blocks
+f   [uuk]: custom block renderers with draw mode can define now the event phase to render it
+I   [uuk]: fixed block default rendering state being empty lists, not None, which the underlying system accepts
 
